--- a/force-app/main/default/lwc/contactListTable/contactListTable.html
+++ b/force-app/main/default/lwc/contactListTable/contactListTable.html
@@ -1,11 +1,43 @@
 <template>
     <lightning-card title="Card List" icon-name="standard:contact">
-        <template if:true={Contacts}>
-            <lightning-datatable key-field="Id" data={Contacts} columns={columns}></lightning-datatable>
+        <template if:true={perPage}>
+            <lightning-datatable
+                key-field="Id"
+                data={perPage}
+                columns={columns}
+                hide-checkbox-column>
+            </lightning-datatable>
+
+            <!-- Pagination Controls -->
+            <div class="slds-m-top_medium slds-align_absolute-center">
+                <lightning-button
+                    label="Previous"
+                    onclick={handlePrev}
+                    disabled={disablePrev}
+                    class="slds-m-horizontal_x-small">
+                </lightning-button>
+
+                <span class="slds-m-horizontal_small">
+                    Page {currentPageNumber} of {totalPageNumber}
+                </span>
+
+                <lightning-button
+                    label="Next"
+                    onclick={handleNext}
+                    disabled={disableNext}
+                    class="slds-m-horizontal_x-small">
+                </lightning-button>
+            </div>
         </template>
-        <template if:false={Contacts}>
-            <p>Data OUT</p>
+
+        <template if:false={perPage}>
+            <p class="slds-p-around_medium">Data OUT</p>
         </template>
-        <template if:true={error}> Error reported console.log in inspect </template>
+
+        <template if:true={error}>
+            <p class="slds-text-color_error slds-p-around_medium">
+                Error reported. See console log in inspect.
+            </p>
+        </template>
     </lightning-card>
 </template>
