--- a/force-app/main/default/lwc/relatedAccount/relatedAccount.html
+++ b/force-app/main/default/lwc/relatedAccount/relatedAccount.html
@@ -1,10 +1,46 @@
 <template>
-    <lightning-card title="Account Record Selector" icon-name="standard:account">
-        <div class="slds-p-around_medium">
-            <lightning-messages></lightning-messages>
-            <lightning-combobox name="Account" label="Select Account" value="" placeholder="Choose an Account"
-                options={accountOptions}>
-            </lightning-combobox>
-        </div>
+    <lightning-card title='Account Record Selector' icon-name="standard:filter">
+    <div class="slds-p-around_medium">
+    <lightning-messages></lightning-messages>
+    <div class="slds-m-bottom_medium">
+    <lightning-combobox 
+                name="Account Filter"
+                label="Filter By Account Name"
+                placeholder="Select Account Name"
+                options={AccOptions}
+                onchange={handleAccountChange}
+    >
+    </lightning-combobox>
+    <div class="slds-m-around_medium">
+    <lightning-card title="Related Contacts" icon-name="standard:contact">
+    <div class='slds-p-around_medium'>
+    <template if:true={contacts}>
+    <lightning-datatable
+                            key-field="Id"
+                            columns={contactcolumns}
+                            data={contacts}
+                            hide-checkbox-column
+    ></lightning-datatable>
+    </template>
+    </div>
     </lightning-card>
-</template>
+    </div>
+    <div class="slds-m-around_medium">
+    <lightning-card title="Related Opportunities" icon-name="standard:opportunity">
+    <div class='slds-p-around_medium'>
+    <template if:true={opportunities}>
+    <lightning-datatable
+                            key-field="Id"
+                            columns={oppcolumns}
+                            data={opportunities}
+                            hide-checkbox-column
+    ></lightning-datatable>
+    </template>
+    </div>
+    </lightning-card>
+    </div>
+    </div>
+    </div>
+    </lightning-card>
+     
+    </template>
